create a video card and video card group and bring both card types more inline with eachother

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/card-group.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/card-group.yml
@@ -6,15 +6,15 @@ cards:
     title:  This is an example card This is an example card This is an example card
     desc: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium quis, ducimus. Unde voluptates id voluptatum odit recusandae veritatis deserunt hic, commodi consequuntur eius omnis eaque quam numquam ipsum et minima.'
     url:
-      link: '#'
-      label: About the Program
+      link: null
+      label: null
   - type: null
     image: null
     title:  This is an example card This is an example card This is an example card
     desc: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium quis, ducimus. Unde voluptates id voluptatum odit recusandae veritatis deserunt hic, commodi consequuntur eius omnis eaque quam numquam ipsum et minima.'
     url:
-      link: '#'
-      label: About the Program
+      link: null
+      label: null
   - type: null
     image: 
       src: "../../images/th-hero-image.jpg"
