--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/component-pages/general-components.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/component-pages/general-components.yml
@@ -186,3 +186,17 @@ video_cards:
     doctor: Karen Hoerst, MD
     title: Advanced Stroke Care
     desc: When symptoms of a stroke begin, it's vital to seek treatment quickly. Dr. Karen Hoerst explains how Reading Hospital is prepared to provide advanced stroke care.
+article_cards:
+  - title: Tower Health Opens New Weight Loss Surgery & Wellness Center
+    desc: 'The new facility, Tower Health Weight Loss Surgery & Wellness Center, brings together physicians, dietitians, and psychologists to combine weight loss care at 1220 Broadcasting Road, Suite 100 in Wyomissing.'
+    date: Nov. 1, 2019
+    url: "#"
+  - title: Reading Hospital Road Run Takes Off on Sunday
+    desc: 'Hosted by The Friends of Reading Hospital, the event consists of a half marathon, 5K, and 1-mile fun run/walk that will race down the beautiful and scenic tree-lined streets of West Reading and Wyomissing.'
+    date: Nov. 1, 2019
+    url: "#"
+  - title: "Reading Hospital CEO, Physicians, Staff Participate in 'No Shave November'"
+    desc: "The month-long event will raise awareness for men's health, McGlinn Cancer Institute, and show support for the many patients undergoing cancer treatment and experiencing hair loss."
+    date: Nov. 1, 2019
+    url: "#"
+
