--- a/config/sites/default/core.entity_view_display.node.service.default.yml
+++ b/config/sites/default/core.entity_view_display.node.service.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_location_ref
     - field.field.node.service.field_medical_specialties_ref
+    - field.field.node.service.field_ref_core_service
     - field.field.node.service.field_service_core_bool
     - field.field.node.service.field_service_flex
     - field.field.node.service.field_service_intro
@@ -43,6 +44,14 @@ content:
     region: content
   field_medical_specialties_ref:
     weight: 103
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_ref_core_service:
+    weight: 108
     label: above
     settings:
       link: true
