add some colors to box links and create a markdown file

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.yml
@@ -1,5 +1,6 @@
 boxes:
-  - title: "McGlinn Cancer Institute"
+  - color: growth
+    title: "McGlinn Cancer Institute"
     text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
     link:
       text: "About the Institute"
@@ -7,7 +8,44 @@ boxes:
     img:
       src: "../../images/AdobeStock_193543982_Preview.jpeg"
       alt: "Alternative text"
-  - title: "Tower Health Transplant Institute"
+  - color: healing
+    title: "Tower Health Transplant Institute"
+    text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
+    link:
+      text: "About the Institute"
+      url: "/"
+    img:
+      src: "../../images/AdobeStock_271545252_Preview.jpeg"
+      alt: "Alternative text"
+  - color: uplifting
+    title: "Miller Regional Heart Center"
+    text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
+    link:
+      text: "About the Center"
+      url: "/"
+    img:
+      src: "../../images/AdobeStock_239096192_Preview.jpeg"
+      alt: "Alternative text"
+  - color: wisdom
+    title: "Weight Loss Surgery & Wellness Center"
+    text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
+    link:
+      text: "About the Center"
+      url: "/"
+    img:
+      src: "../../images/AdobeStock_204599156_Preview.jpeg"
+      alt: "Alternative text"
+  - color: tranquil
+    title: "McGlinn Cancer Institute"
+    text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
+    link:
+      text: "About the Institute"
+      url: "/"
+    img:
+      src: "../../images/AdobeStock_193543982_Preview.jpeg"
+      alt: "Alternative text"
+  - color: energy
+    title: "Tower Health Transplant Institute"
     text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
     link:
       text: "About the Institute"
