--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -7,10 +7,12 @@ dependencies:
     - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_location_ref
     - field.field.node.service.field_medical_specialties_ref
-    - field.field.node.service.field_ref_core_service
     - field.field.node.service.field_service_core_bool
+    - field.field.node.service.field_service_core_ref
     - field.field.node.service.field_service_flex
+    - field.field.node.service.field_service_headline
     - field.field.node.service.field_service_intro
+    - field.field.node.service.field_service_related_ref
     - node.type.service
     - workflows.workflow.default
   module:
@@ -38,6 +40,7 @@ third_party_settings:
       region: content
     group_description:
       children:
+        - field_service_headline
         - field_service_intro
         - field_body
       parent_name: group_vertical_tabs
@@ -54,7 +57,7 @@ third_party_settings:
     group_core_service:
       children:
         - field_service_core_bool
-        - field_ref_core_service
+        - field_service_core_ref
       parent_name: group_vertical_tabs
       weight: 7
       format_type: tab
@@ -108,7 +111,7 @@ content:
     third_party_settings: {  }
   field_body:
     type: text_textarea
-    weight: 13
+    weight: 28
     region: content
     settings:
       rows: 5
@@ -141,7 +144,13 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_ref_core_service:
+  field_service_core_bool:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_service_core_ref:
     weight: 10
     settings:
       match_operator: CONTAINS
@@ -149,12 +158,6 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
-    region: content
-  field_service_core_bool:
-    weight: 9
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
     region: content
   field_service_flex:
     type: entity_reference_paragraphs
@@ -168,14 +171,31 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
+  field_service_headline:
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_service_intro:
     type: text_textarea
-    weight: 12
+    weight: 27
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  field_service_related_ref:
+    weight: 27
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   moderation_state:
     type: moderation_state_default
     weight: 7
