--- a/config/sites/default/core.entity_view_display.node.service.default.yml
+++ b/config/sites/default/core.entity_view_display.node.service.default.yml
@@ -7,10 +7,12 @@ dependencies:
     - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_location_ref
     - field.field.node.service.field_medical_specialties_ref
-    - field.field.node.service.field_ref_core_service
     - field.field.node.service.field_service_core_bool
+    - field.field.node.service.field_service_core_ref
     - field.field.node.service.field_service_flex
+    - field.field.node.service.field_service_headline
     - field.field.node.service.field_service_intro
+    - field.field.node.service.field_service_related_ref
     - node.type.service
   module:
     - entity_reference_revisions
@@ -50,20 +52,20 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_ref_core_service:
-    weight: 108
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_service_core_bool:
     weight: 107
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_service_core_ref:
+    weight: 108
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_service_flex:
     type: entity_reference_revisions_entity_view
@@ -74,12 +76,28 @@ content:
       link: ''
     third_party_settings: {  }
     region: content
+  field_service_headline:
+    weight: 109
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_service_intro:
     weight: 105
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_service_related_ref:
+    weight: 110
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   links:
     weight: 100
