--- a/config/sites/default/field.field.node.service.field_medical_specialties_ref.yml
+++ b/config/sites/default/field.field.node.service.field_medical_specialties_ref.yml
@@ -12,7 +12,7 @@ entity_type: node
 bundle: service
 label: 'Medical Specialty'
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
