--- a/config/sites/default/field.field.node.service.field_service_core_bool.yml
+++ b/config/sites/default/field.field.node.service.field_service_core_bool.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: service
 label: 'Is this a core service'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
