--- a/config/sites/default/field.storage.node.field_service_core_ref.yml
+++ b/config/sites/default/field.storage.node.field_service_core_ref.yml
@@ -1,12 +1,12 @@
-uuid: e26e700b-af12-40a6-a2d3-a1c920def00a
+uuid: 3add7df1-e224-45fe-9602-bc10ad04e988
 langcode: en
 status: true
 dependencies:
   module:
     - node
     - taxonomy
-id: node.field_ref_core_service
-field_name: field_ref_core_service
+id: node.field_service_core_ref
+field_name: field_service_core_ref
 entity_type: node
 type: entity_reference
 settings:
