--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
@@ -8,7 +8,8 @@ location:
     address2: "West Reading, PA 19611"
     phone: "484-555-5555"
     fax: "484-555-5556"
+    hours: true
   link:
     href: "/"
-    text: "Directions"
+    text: "Map & Directions"
     icon: "th-find-hospital.svg"
