--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.yml
@@ -3,47 +3,136 @@ results_count: 128
 results_term: Heart
 teasers:
   - img:
-      src: "https://www.placeimg.com/500/500/any"
+      src: "../../images/people/Roland-Donald.jpg"
       alt: "Alternative Text"
-    classes: "growth bottom-right"
     link:
       url: "/"
       text: "Request an Appointment"
       icon: "th-cal.svg"
+      variation: "small"
     details:
       name: "Donald E. Roland, MD, DMD"
-      specialties: "Oral and Maxillofacial Surgery"
-      focus: "Cranio-facial clefts, Rhinoplasty, Genioplasty"
+      specialties: 
+        - "Oral and Maxillofacial Surgery"
+      focus: 
+        - "Cranio-facial clefts, Rhinoplasty, Genioplasty"
       location: "Pottstown, PA"
-      language: "English"
+      language: 
+        - "English"
+      rating: '4.2'
     type: "provider"
+  - details:
+      title: "Lessons from the Oncology Center"
+      date: "December 6, 2019"
+      tags:
+        - Oncology
+        - Patient Stories
+      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit leo vitae nunc volutpat tristique at et lorem. Pellentesque non consectetur tellus, quis rhoncus odio. Duis consequat sem ac accumsan dictum. Aliquam rutrum non nibh vel commodo. Cras eleifend dapibus ultrices...."
+    type: article
   - img:
-      src: "https://www.placeimg.com/500/500/any"
+      src: "../../images/locations/teaser-mcglinn.jpg"
       alt: "Alternative Text"
-    classes: "growth bottom-right"
+    details:
+      name: "McGlinn Cancer Institute"
+      address1: "420 S. Fifth Avenue"
+      address2: "West Reading, PA 19611"
+      phone: "484-555-5555"
+      fax: "484-555-5556"
+      hours: true
+    link:
+      url: "/"
+      text: "Map & Directions"
+      icon: "th-find-hospital.svg"
+      variation: "small"
+    type: location
+  - details:
+      title: "Giving to Tower Health"
+      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit leo vitae nunc volutpat tristique at et lorem. Pellentesque non consectetur tellus, quis rhoncus odio. Duis consequat sem ac accumsan dictum. Aliquam rutrum non nibh vel commodo. Cras eleifend dapibus ultrices...."
+    type: basic
+  - img:
+      src: "../../images/locations/teaser-reading.jpg"
+      alt: "Alternative Text"
+    details:
+      name: "Reading Hospital"
+      address1: "420 S. Fifth Avenue"
+      address2: "West Reading, PA 19611"
+      phone: "484-555-5555"
+      fax: "484-555-5556"
+    link:
+      url: "/"
+      text: "Map & Directions"
+      icon: "th-find-hospital.svg"
+      variation: "small"
+    type: location
+  - details:
+      title: "Pediatrics"
+      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit leo vitae nunc volutpat tristique at et lorem. Pellentesque non consectetur tellus, quis rhoncus odio. Duis consequat sem ac accumsan dictum. Aliquam rutrum non nibh vel commodo. Cras eleifend dapibus ultrices...."
+      related:
+        - Pediatric Cardiology
+        - Pediatric Radiology
+    type: service
+  - img:
+      src: "../../images/people/abdel-wahab-amir.jpg"
+      alt: "Alternative Text"
     link:
       url: "/"
       text: "Request an Appointment"
       icon: "th-cal.svg"
+      variation: "small"
     details:
       name: "Amir A. Abdel-Wahab, MD, FAAP"
-      specialties: "Pediatrics"
-      focus: "Child Development, Preventative Medicine"
+      specialties: 
+        - "Pediatrics"
+      focus: 
+        - "Child Development, Preventative Medicine"
       location: "Wyomissing, PA"
-      language: "English"
+      language: 
+        - "English"
+      rating: '5'
     type: "provider"
   - img:
-      src: "https://www.placeimg.com/500/500/any"
+      src: "../../images/people/Roland-Donald.jpg"
       alt: "Alternative Text"
-    classes: "growth bottom-right"
     link:
       url: "/"
       text: "Request an Appointment"
       icon: "th-cal.svg"
+      variation: "small"
     details:
-      name: "Monique Lisa Abner, MD"
-      specialties: "Plastic Surgery"
-      focus: "Wound healing, Hyperbaric Medicine"
-      location: "Wyomissing, PA"
-      language: "English"
+      name: "Donald E. Roland, MD, DMD"
+      specialties: 
+        - "Oral and Maxillofacial Surgery"
+      focus: 
+        - "Cranio-facial clefts, Rhinoplasty, Genioplasty"
+      location: "Pottstown, PA"
+      language: 
+        - "English"
+      rating: '4.2'
     type: "provider"
+  - details:
+      title: "Lessons from the Oncology Center"
+      date: "December 6, 2019"
+      tags:
+        - Oncology
+        - Patient Stories
+      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit leo vitae nunc volutpat tristique at et lorem. Pellentesque non consectetur tellus, quis rhoncus odio. Duis consequat sem ac accumsan dictum. Aliquam rutrum non nibh vel commodo. Cras eleifend dapibus ultrices...."
+    type: article
+  - img:
+      src: "../../images/locations/teaser-mcglinn.jpg"
+      alt: "Alternative Text"
+    details:
+      name: "McGlinn Cancer Institute"
+      address1: "420 S. Fifth Avenue"
+      address2: "West Reading, PA 19611"
+      phone: "484-555-5555"
+      fax: "484-555-5556"
+    link:
+      url: "/"
+      text: "Map & Directions"
+      icon: "th-find-hospital.svg"
+      variation: "small"
+    type: location
+  - details:
+      title: "Giving to Tower Health"
+      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit leo vitae nunc volutpat tristique at et lorem. Pellentesque non consectetur tellus, quis rhoncus odio. Duis consequat sem ac accumsan dictum. Aliquam rutrum non nibh vel commodo. Cras eleifend dapibus ultrices...."
+    type: basic
