--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.yml
@@ -8,8 +8,13 @@ provider:
     icon: "th-cal.svg"
   details:
     name: "Donald E. Roland, MD, DMD"
-    specialties: "Oral and Maxillofacial Surgery"
-    focus: "Cranio-facial clefts, Rhinoplasty, Genioplasty"
+    specialties: 
+      - "Oral and Maxillofacial Surgery"
+    focus: 
+      - "Cranio-facial clefts"
+      - "Rhinoplasty"
+      - "Genioplasty"
     location: "Pottstown, PA"
-    language: "English"
+    language: 
+      - "English"
     rating: '4.2'
