--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
@@ -171,7 +171,7 @@ insurance:
           - "UHC Compass Rose PPO Plan"
       meta: 'Please check with your insurance provider before booking an appointment.'
 employed:
-  label: Employed By
+  label: Member of
   sidebar: true
   items:
     - text: Tower Health Medical Group
