--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
     "require": {
         "composer/installers": "^1.0",
         "cweagans/composer-patches": "^1.6",
-        "drupal-composer/drupal-scaffold": "^2.5.0",
         "drupal-pattern-lab/add-attributes-twig-extension": "^1.0",
         "drupal-pattern-lab/attach-library-twig-extension": "^1.1",
         "drupal-pattern-lab/bem-twig-extension": "^1.0",
@@ -42,7 +41,8 @@
         "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
         "drupal/config_update": "^1.6",
-        "drupal/core": "^8.0@stable",
+        "drupal/core-composer-scaffold": "^8.8",
+        "drupal/core-recommended": "^8.8",
         "drupal/default_content": "^1.0@alpha",
         "drupal/devel": "^2.1",
         "drupal/emulsify": "^3.1",
@@ -65,7 +65,7 @@
         "drupal/node_title_help_text": "^1.1",
         "drupal/office_hours": "^1.1",
         "drupal/paragraphs": "^1.8",
-        "drupal/pathauto": "^1.4",
+        "drupal/pathauto": "^1.6",
         "drupal/rabbit_hole": "^1.0@beta",
         "drupal/readonly_field_widget": "^1.3",
         "drupal/redirect": "^1.4",
@@ -83,12 +83,13 @@
     },
     "require-dev": {
         "behat/behat": "^3.1",
-        "behat/mink": "^1.7",
+        "behat/mink": "1.7.x-dev",
         "behat/mink-extension": "^2.2",
         "behat/mink-goutte-driver": "^1.2",
-        "drupal/coder": "~8.2.12",
+        "drupal/coder": "^8.3.6",
+        "drupal/core-dev": "^8.8",
         "drupal/drupal-extension": "^3.1",
-        "palantirnet/the-build": "^2.0",
+        "palantirnet/the-build": "^2.2.1",
         "palantirnet/the-vagrant": "^2.3"
     },
     "suggest": {
@@ -110,12 +111,12 @@
             "drush/contrib/{$name}": ["type:drupal-drush"]
         },
         "drupal-scaffold": {
-            "excludes": [
-                ".htaccess"
-            ],
-            "initial": {
-                ".htaccess": ".htaccess"
-            }
+            "locations": {
+                "web-root": "docroot/"
+            },
+            "allowed-packages": [
+                "drupal/core"
+            ]
         },
         "patches": {
             "drupal/migrate_plus": {
@@ -123,9 +124,6 @@
             },
             "drupal/node_title_help_text": {
                 "node_title_help_text_inline_entity_form_entity_form_alter loads NodeType even when not referencing nodes (https://www.drupal.org/project/node_title_help_text/issues/307031)": "https://www.drupal.org/files/issues/2019-07-25/ief-only-nodes.patch"
-            },
-            "drupal/menu_item_extras": {
-                "MenuItemExtrasCommands breaks drush 8.x (https://www.drupal.org/project/menu_item_extras/issues/3090785)": "https://www.drupal.org/files/issues/2019-11-13/3090785-15.patch"
             }
         }
     }
